--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "nextjs": "^0.0.3",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.4.0",
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -36,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^2.2.7",
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
