--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vercel": "^34.0.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
